pkg/test/resourcefixture/testdata/basic/compute/v1beta1/computefirewall/computefirewall/_generated_object_computefirewall.golden.yaml
apiVersion: compute.cnrm.cloud.google.com/v1beta1
kind: ComputeFirewall
metadata:
  annotations:
    cnrm.cloud.google.com/management-conflict-prevention-policy: none
    cnrm.cloud.google.com/project-id: ${projectId}
    cnrm.cloud.google.com/state-into-spec: absent
  finalizers:
  - cnrm.cloud.google.com/finalizer
  - cnrm.cloud.google.com/deletion-defender
  generation: 3
  labels:
    cnrm-test: "true"
    label-one: value-one
  name: ${firewallID}
  namespace: ${uniqueId}
  selfLink: /apis/compute.cnrm.cloud.google.com/v1beta1/namespaces/${uniqueId}/computefirewalls/${firewallID}
spec:
  allow:
  - protocol: tcp
  disabled: true
  networkRef:
    name: default
  resourceID: ${firewallID}
status:
  conditions:
  - lastTransitionTime: "1970-01-01T00:00:00Z"
    message: The resource is up to date
    reason: UpToDate
    status: "True"
    type: Ready
  creationTimestamp: "1970-01-01T00:00:00Z"
  observedGeneration: 3
  selfLink: https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}
