pkg/test/resourcefixture/testdata/basic/compute/v1beta1/computefirewall/computefirewall/_http_migration_phase2_legacy_re-reconciliation.log
GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/computefirewall-${uniqueId}?alt=json
Content-Type: application/json
User-Agent: kcc/${kccVersion} (+https://github.com/GoogleCloudPlatform/k8s-config-connector) kcc/controller-manager/${kccVersion}

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "80",
        "1000-2000"
      ]
    },
    {
      "IPProtocol": "udp",
      "ports": [
        "1184",
        "2"
      ]
    }
  ],
  "creationTimestamp": "2024-04-01T12:34:56.123456Z",
  "description": "",
  "direction": "INGRESS",
  "disabled": false,
  "enableLogging": false,
  "id": "000000000000000000000",
  "kind": "compute#firewall",
  "logConfig": {
    "enable": false
  },
  "name": "computefirewall-${uniqueId}",
  "network": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/default",
  "priority": 1000,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/computefirewall-${uniqueId}",
  "sourceRanges": [
    "0.0.0.0/0"
  ]
}
