pkg/test/resourcefixture/testdata/basic/compute/v1beta1/computefirewall/computefirewall/_http_old_controller.log
GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}?alt=json
Content-Type: application/json

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "autoCreateSubnetworks": true,
  "creationTimestamp": "2024-04-01T12:34:56.123456Z",
  "description": "Default network for the project",
  "id": "000000000000000000000",
  "kind": "compute#network",
  "name": "${networkID}",
  "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "subnetworks": [
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/africa-south1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-east1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-east2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-northeast1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-northeast2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-northeast3/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-south1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-south2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-southeast1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-southeast2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/australia-southeast1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/australia-southeast2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-central2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-north1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-north2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-southwest1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west10/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west12/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west3/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west4/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west6/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west8/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west9/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/me-central1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/me-west1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/northamerica-northeast1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/northamerica-northeast2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/northamerica-south1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/southamerica-east1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/southamerica-west1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-central1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-east1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-east4/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-east5/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-south1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-west1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-west2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-west3/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-west4/subnetworks/${networkID}"
  ]
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Content-Type: application/json

404 Not Found
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "error": {
    "code": 404,
    "errors": [
      {
        "domain": "global",
        "message": "The resource 'projects/${projectId}/global/firewalls/${firewallID}' was not found",
        "reason": "notFound"
      }
    ],
    "message": "The resource 'projects/${projectId}/global/firewalls/${firewallID}' was not found"
  }
}

---

POST https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls?alt=json
Content-Type: application/json

{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "80",
        "1000-2000"
      ]
    },
    {
      "IPProtocol": "udp",
      "ports": [
        "1184",
        "2"
      ]
    }
  ],
  "disabled": false,
  "logConfig": {
    "enable": false
  },
  "name": "${firewallID}",
  "network": "projects/${projectId}/global/networks/${networkID}",
  "priority": 1000
}

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "insert",
  "progress": 0,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "RUNNING",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}?alt=json&prettyPrint=false

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "endTime": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "insert",
  "progress": 100,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "DONE",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Content-Type: application/json

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "80",
        "1000-2000"
      ]
    },
    {
      "IPProtocol": "udp",
      "ports": [
        "1184",
        "2"
      ]
    }
  ],
  "creationTimestamp": "2024-04-01T12:34:56.123456Z",
  "disabled": false,
  "id": "000000000000000000000",
  "kind": "compute#firewall",
  "logConfig": {
    "enable": false
  },
  "name": "${firewallID}",
  "network": "projects/${projectId}/global/networks/${networkID}",
  "priority": 1000,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}"
}

---

PATCH https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Content-Type: application/json

{
  "allowed": [
    {
      "IPProtocol": "tcp"
    }
  ],
  "denied": [],
  "destinationRanges": [],
  "disabled": true,
  "logConfig": {
    "enable": false
  },
  "network": "projects/${projectId}/global/networks/${networkID}",
  "priority": 1000,
  "sourceRanges": [],
  "sourceServiceAccounts": [],
  "sourceTags": [],
  "targetServiceAccounts": [],
  "targetTags": []
}

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "compute.firewalls.patch",
  "progress": 0,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "RUNNING",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}?alt=json&prettyPrint=false

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "endTime": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "compute.firewalls.patch",
  "progress": 100,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "DONE",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Content-Type: application/json

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "80",
        "1000-2000"
      ]
    },
    {
      "IPProtocol": "udp",
      "ports": [
        "1184",
        "2"
      ]
    },
    {
      "IPProtocol": "tcp"
    }
  ],
  "creationTimestamp": "2024-04-01T12:34:56.123456Z",
  "disabled": true,
  "id": "000000000000000000000",
  "kind": "compute#firewall",
  "logConfig": {
    "enable": false
  },
  "name": "${firewallID}",
  "network": "projects/${projectId}/global/networks/${networkID}",
  "priority": 1000,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}"
}

---

DELETE https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Content-Type: application/json

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "delete",
  "progress": 0,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "RUNNING",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}?alt=json&prettyPrint=false

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "endTime": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "delete",
  "progress": 100,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "DONE",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}
