pkg/test/resourcefixture/testdata/basic/compute/v1beta1/computefirewall/computefirewall/_identities.yaml
- caisURL: //compute.googleapis.com/projects/${projectId}/global/networks/default
  group: compute.cnrm.cloud.google.com
  kind: ComputeNetwork
  name: default
  namespace: ${uniqueId}
  version: v1beta1
- caisURL: unknown
  group: compute.cnrm.cloud.google.com
  kind: ComputeFirewall
  name: computefirewall-${uniqueId}
  namespace: ${uniqueId}
  version: v1beta1
